--- a/backend/.env
+++ b/backend/.env
@@ -1,8 +1,13 @@
 NODE_ENV=development
 PORT=5000
-# Remplacez les valeurs entre <> par vos informations de connexion MongoDB Atlas
 MONGO_URI=mongodb+srv://arnaudyoboue1:arnaud%402025@cluster0.bsmix.mongodb.net/Ecommerce?retryWrites=true&w=majority
 JWT_SECRET=votre_clé_secrète_jwt_très_sécurisée
 JWT_EXPIRE=30d
 JWT_COOKIE_EXPIRE=30
-CLIENT_URL=http://localhost:3000
+REACT_APP_API_URL=https://ecommerce-backend-2-12tl.onrender.com/api
+
+
+
+
+# Stripe configuration
+STRIPE_SECRET_KEY=sk_test_51N4
