--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^19.0.0",
     "react-id-swiper": "^4.0.0",
     "react-router-dom": "^7.5.3",
+    "react-scripts": "^5.0.1",
     "swiper": "^11.2.6"
   },
   "devDependencies": {
