--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+   
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build": "npm install --legacy-peer-deps && npm run build:app",
+    "build:app": "react-scripts build"
   },
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
