--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-   
     "lint": "eslint .",
     "preview": "vite preview",
     "build": "npm install --legacy-peer-deps && npm run build:app",
@@ -16,6 +15,8 @@
     "@stripe/react-stripe-js": "^3.6.0",
     "@stripe/stripe-js": "^7.2.0",
     "@types/swiper": "^5.4.3",
+    "ajv": "^6.12.6",
+    "ajv-keywords": "^3.5.2",
     "antd": "^5.24.9",
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
@@ -50,5 +51,17 @@
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.26.1",
     "vite": "^6.3.1"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
