--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint .",
-    "serve": "vite preview --port 4173"  // Pour tester la production en local
+    "serve": "vite preview --port 4173"
   },
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
