--- a/package.json
+++ b/package.json
@@ -8,28 +8,29 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint .",
-    "serve": "vite preview --port 4173"
+    "serve": "vite preview --port 4173",
+    "render-build": "npm install && vite build"
   },
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
     "@stripe/react-stripe-js": "^3.6.0",
     "@stripe/stripe-js": "^7.2.0",
     "@types/swiper": "^5.4.3",
+    "@vitejs/plugin-react": "^4.3.4",
     "antd": "^5.24.9",
     "axios": "^1.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-id-swiper": "^4.0.0",
     "react-router-dom": "^7.5.3",
-    "swiper": "^11.2.6"
+    "swiper": "^11.2.6",
+    "vite": "^6.3.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
-    "typescript": "~5.7.2",
-    "vite": "^6.3.1"
+    "typescript": "~5.7.2"
   },
   "browserslist": {
     "production": [
