--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "npm install vite && vite build",
     "preview": "vite preview",
-    "lint": "eslint .",
-    "serve": "vite preview --port 4173",
-    "render-build": "npm install && vite build"
+    "render-build": "npm install --production=false && vite build"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^4.3.4",
+    "vite": "^6.3.1",
     "@ant-design/icons": "^6.0.0",
     "@stripe/react-stripe-js": "^3.6.0",
     "@stripe/stripe-js": "^7.2.0",
